--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "date-fns": "^3.4.0"
   }
 }
